// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseCardMenu default snapshot 1`] = `
<Fragment>
  <Dropdown
    onToggle={[MockFunction mockHandleToggleDropdown]}
  >
    <Dropdown.Toggle
      alt="Course actions dropdown"
      as="IconButton"
      iconAs="Icon"
      id="course-actions-dropdown-test-card-id"
      src={[MockFunction icons.MoreVert]}
      variant="primary"
    />
    <Dropdown.Menu>
      <Dropdown.Item
        data-testid="unenrollModalToggle"
        disabled={false}
        onClick={[MockFunction unenrollShow]}
      >
        Unenroll
      </Dropdown.Item>
      <Dropdown.Item
        data-testid="emailSettingsModalToggle"
        disabled={false}
        onClick={[MockFunction emailSettingShow]}
      >
        Email settings
      </Dropdown.Item>
      <FacebookShareButton
        className="pgn__dropdown-item dropdown-item"
        onClick={[MockFunction handleFacebookShare]}
        resetButtonStyle={false}
        title="I'm taking test-course-name online with facebook-social-brand.  Check it out!"
        url="facebook-share-url"
      >
        Share to Facebook
      </FacebookShareButton>
      <TwitterShareButton
        className="pgn__dropdown-item dropdown-item"
        onClick={[MockFunction handleTwitterShare]}
        resetButtonStyle={false}
        title="I'm taking test-course-name online with twitter-social-brand.  Check it out!"
        url="twitter-share-url"
      >
        Share to Twitter
      </TwitterShareButton>
    </Dropdown.Menu>
  </Dropdown>
  <UnenrollConfirmModal
    cardId="test-card-id"
    closeModal={[MockFunction unenrollHide]}
    show={false}
  />
  <EmailSettingsModal
    cardId="test-card-id"
    closeModal={[MockFunction emailSettingHide]}
    show={false}
  />
</Fragment>
`;

exports[`CourseCardMenu masquerading snapshot 1`] = `
<Fragment>
  <Dropdown
    onToggle={[MockFunction mockHandleToggleDropdown]}
  >
    <Dropdown.Toggle
      alt="Course actions dropdown"
      as="IconButton"
      iconAs="Icon"
      id="course-actions-dropdown-test-card-id"
      src={[MockFunction icons.MoreVert]}
      variant="primary"
    />
    <Dropdown.Menu>
      <Dropdown.Item
        data-testid="unenrollModalToggle"
        disabled={true}
        onClick={[MockFunction unenrollShow]}
      >
        Unenroll
      </Dropdown.Item>
      <Dropdown.Item
        data-testid="emailSettingsModalToggle"
        disabled={true}
        onClick={[MockFunction emailSettingShow]}
      >
        Email settings
      </Dropdown.Item>
      <FacebookShareButton
        className="pgn__dropdown-item dropdown-item"
        onClick={[MockFunction handleFacebookShare]}
        resetButtonStyle={false}
        title="I'm taking test-course-name online with facebook-social-brand.  Check it out!"
        url="facebook-share-url"
      >
        Share to Facebook
      </FacebookShareButton>
      <TwitterShareButton
        className="pgn__dropdown-item dropdown-item"
        onClick={[MockFunction handleTwitterShare]}
        resetButtonStyle={false}
        title="I'm taking test-course-name online with twitter-social-brand.  Check it out!"
        url="twitter-share-url"
      >
        Share to Twitter
      </TwitterShareButton>
    </Dropdown.Menu>
  </Dropdown>
  <UnenrollConfirmModal
    cardId="test-card-id"
    closeModal={[MockFunction unenrollHide]}
    show={false}
  />
  <EmailSettingsModal
    cardId="test-card-id"
    closeModal={[MockFunction emailSettingHide]}
    show={false}
  />
</Fragment>
`;

exports[`CourseCardMenu renders null if showDropdown is false 1`] = `""`;
